# oqs-engine

./: .Doxyfile  .gitignore  CMakeLists.txt  README.md
.CMake/: compiler_flags.cmake
src/: CMakeLists.txt  oqse.c  oqse.ec  oqse.h  oqse.txt  oqse_ameth.c  oqse_err.c  oqse_err.h  oqse_pmeth.c  oqse_utils.c  oqse_utils.h
tests/: CMakeLists.txt  oqse_test.c
tests/sample_results/: results
